#   Autoconf script 
#
#   
#   This program is free software; you can redistribute it and/or
#   modify it under the terms of the GNU General Public License
#   as published by the Free Software Foundation; either version
#   2 of the License, or (at your option) any later version.
#
AC_REVISION($Id: configure.in,v 1.1 2010-01-13 10:47:16 eric Exp $)
dnl
dnl Process this file with autoconf to produce a configure script.
dnl
AC_PREREQ(2.13)
AC_INIT(./Makefile.in)
AC_SUBST(VERSION)
VERSION=`cat VERSION`
AC_SUBST(RELEASE)
RELEASE=`cat RELEASE`
AC_SUBST(PACKAGE)
PACKAGE=dynacase-onefam
AC_SUBST(APPNAME)
APPNAME=ONEFAM
ac_default_prefix=/usr/share/what
AC_SUBST(PUBRULE)
PUBRULE=
AC_ARG_WITH(pubrule, [  --with-pubrule=dir	Path to PubRule], PUBRULEDIR=$withval)
if test "x$PUBRULEDIR" != "x"; then
  AC_CHECK_FILE($PUBRULEDIR/PubRule, PUBRULE=$PUBRULEDIR/PubRule)
fi

if test "x$PUBRULE" == "x"; then
  PUBRULEDIR=`pwd`
  AC_CHECK_FILE($PUBRULEDIR/PubRule, PUBRULE=$PUBRULEDIR/PubRule)
fi
if test "x$PUBRULE" == "x"; then
  PUBRULEDIR=$HOME/anakeen/devtools
  AC_CHECK_FILE($PUBRULEDIR/PubRule, PUBRULE=$PUBRULEDIR/PubRule)
fi
if test "x$PUBRULE" = "x"; then
  AC_MSG_ERROR([Could not find PubRule])
fi
AC_MSG_NOTICE([PubRule located at $PUBRULEDIR])
PUBRULE=$PUBRULEDIR

AC_OUTPUT(Makefile info.xml ONEFAM_init.php ONEFAM_EXT/info.xml)
